<resources>
    <string name="app_name">MyRecipeBook</string>
    <string name="share_text">Share Recipe</string>
    <string name="add_meal">Add Your Meal</string>
    <string name="log_in">Log In</string>
    <string name="share_intent_text">Share your Recipe with...</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="speech_prompt">What did you eat?</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="yay_fragments">Yay Fragments!</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="recipe_name">Title</string>
    <string name="total_time">Total time: </string>
    <string name="number_of_servings">Servings: </string>
    <string name="rating">Rating: </string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="weight">Weight(in kg)</string>
    <string name="height">Height(in cm)</string>
    <string name="calories">Calories</string>
    <string name="calculate_button">Calculate</string>
    <string name="todays_calories">Todays Calories</string>
    <string name="macro_calories">2000/2000</string>
    <string name="btnBrowse">My Recipes</string>
    <string name="btnCamera">My Recipes</string>
    <string name="btnVideo">Record Video</string>
    <string name="btnImg">Click Picture</string>
    <string name="btnVideoBrowse">My Recipe Videos</string>
    <string name="file_rename">Input new name</string>
    <string name="btnSetting">Camera Settings</string>
    <string name="pictureSizeText">Picture Size</string>
    <string name="videoSizeText">Video Size</string>
    <string name="btnSave">Save</string>
    <string name="btn_confirm">Yes</string>
    <string name="btn_cancel">No</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="title_activity_main">Camera</string>
    <string name="title_activity_no_camera">No Camera</string>
    <string name="delete">Delete</string>
    <string name="password_hint">Must be at least 6 characters long</string>
    <string name="no_account">No account yet? create one</string>
    <string name="full_name">Full name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signup_button">Sign Up</string>
    <string name="signin_button">Sign In</string>
    <string name="total_calories">Total today (2k max)</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
