<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eleven.group.myrecipiebook.activity.SignUp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitEnd"
        android:background="@drawable/signin"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColorHint="#bebebe"
        android:textColor="#bebebe"
        android:layout_above="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_marginBottom="26dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#bebebe"
        android:textColor="#bebebe"
        android:layout_marginBottom="13dp"
        android:layout_above="@+id/tv_password_hint"
        android:layout_alignStart="@+id/tv_password_hint"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified" />

    <TextView
        android:id="@+id/tv_password_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_hint"
        android:textColor="#bebebe"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/email_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_button"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/tv_password_hint"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_account"
        android:textColor="#ffffff"
        android:layout_below="@+id/email_sign_in_button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
