<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#2E1E61">
    
    <Button
        android:id="@+id/btnGridShow"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:textColor="#BFFCF4"
        android:background="#51B8AB"
        android:text="My Recipes"/>


    <Button
        android:id="@+id/btnVideoBrowse"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:textColor="#A0C4F3"
        android:text="My Recipe Videos"
        android:background="#4974AC"/>

    <Button
        android:id="@+id/btnImg"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:text="@string/btnImg"
        android:textColor="#B6E5F9"
        android:background="#45A6D0"/>

    <Button
        android:id="@+id/btnVideo"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:text="@string/btnVideo"
        android:background="#26466D"
        android:textColor="#80A5E9"/>

    <Button
        android:id="@+id/arc_hf_btnSetting"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:text="@string/btnSetting"
        android:background="#943417"
        android:textColor="#FAB28B"/>

</LinearLayout>