<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone"
    tools:context="com.eleven.group.myrecipiebook.activity.MacrosCalculation">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"/>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/idPieChart"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal|top">

    </com.github.mikephil.charting.charts.PieChart>

    <LinearLayout
        android:id="@+id/ll_display_calories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:layout_marginStart="40dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tvCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvMacroCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_calories_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/tvCaloriesTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/total_calories"
                android:textColor="@color/text_color"/>

            <TextView
                android:id="@+id/tvMacroCaloriesTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_display_macros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_protein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="50dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tvProtein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protein"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvMacroProtein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_carbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="50dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tvBarbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/carbs"
                android:textColor="@color/text_color"/>

            <TextView
                android:id="@+id/tvMacroCarbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="50dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tvFat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/fat"
                android:textColor="@color/text_color"/>

            <TextView
                android:id="@+id/tvMacroFat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

